manifests/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copilot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: copilot-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: copilot-app
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: copilot-app-container
        image: lgcnsacr.azurecr.io/demo/copilot-app:v1
        ports:
        - containerPort: 80
        volumesMounts:
          - name: secret-volume
            mountPath: mnt/secrets-store
            readOnly: true
      volumes:
      - name: secret-volume
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-sync"
