manifests/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copilot-app
  namespace: app
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: copilot-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: copilot-app
        azure.workload.identity/use: "true" 
    spec:
      serviceAccountName: workload-sa
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: copilot-app-container
        image: YOUR-REGISTRY.azurecr.io/ragapp:latest
        ports:
        - containerPort: 80        
---
apiVersion: v1
kind: Service
metadata:
  name: copilot-svc
  namespace: app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: copilot-app
