manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: copilot-svc
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: copilot-app
